--- a/java-codetool/.project
+++ b/java-codetool/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>office</name>
+	<name>java-codetool</name>
 	<comment></comment>
 	<projects>
 	</projects>
