--- a/java-codetool/pom.xml
+++ b/java-codetool/pom.xml
@@ -35,6 +35,18 @@
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
+    <!-- oracle数据库驱动 -->
+    <dependency>
+		<groupId>com.oracle</groupId>
+	    <artifactId>ojdbc6</artifactId>
+	    <version>11.1.0.6.0</version>
+	</dependency>
+    <!--  sqlserver 驱动 -->
+    <dependency>  
+        <groupId>com.microsoft.sqlserver</groupId>  
+        <artifactId>sqljdbc4</artifactId>  
+        <version>4.0</version>  
+    </dependency>
     
     <dependency>
 	  <groupId>maven</groupId>
