忽略项目的配置文件

--- a/java-codetool/resources/.gitignore
+++ b/java-codetool/resources/.gitignore
@@ -17,3 +17,8 @@
 /config-youmai-system.xml
 /config-kitchen-coat.xml
 /config-erpcash.xml
+/config-activity-new.xml
+/config-activity.xml
+/config-collectflowdata.xml
+/config-epochpet.xml
+/config-health.xml
